--- a/templates/minha_consulta.html
+++ b/templates/minha_consulta.html
@@ -5,6 +5,9 @@
 <p>Sua origem é:    {{form.origem.value}}</p>
 <p>Seu destino é:   {{form.destino.value}}</p>
 <p>Data de ida é:   {{form.ida.value}}</p>
-<p>Data de volta é: {{form.volta.value}}</p>
+<p>A classe escolhida é: {{form.classe_viagem.value}}</p>
+<p>Seu email: {{form.email.value}}</p>
+<p>Data da pesquisa: {{form.data_pesquisa.}}</p>
+<p>Informações extras: {{form.info_extra.value}}</p>
 
 {% endblock content %}
