--- a/templates/index.html
+++ b/templates/index.html
@@ -18,6 +18,18 @@
                 </section>
             {% endfor %}
         {% endfor %}
+        {% for field in pessoa_form.visible_fields %}
+            <div class="form-group">
+                <label for="{{field.id_for_label}}">{{field.label}}</label>
+                {{field|add_class:'form-control'}}
+            </div>
+            {% for error in field.errors%}
+                <section class="alert alert-danger" role="alert">
+                    {{field.errors}}
+                </section>
+            {% endfor %}
+        {% endfor %}
+
         <input type="submit" value="OK" class="btn btn-success"/>
     </form>
 </section>
